--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -13,6 +13,9 @@
   --error-500: #ff6666;
   --error-900: #cc0000;
 
+  --success-100: #00e600;
+  --success-700: #99f599;
+
   --gray-100: #fafafb;
   --gray-700: #a6a6ab;
   --gray-900: #d2d3d5;
