refactor invitation.ejs by exchange password for id at the required place

--- a/apps/server/views/invitation.ejs
+++ b/apps/server/views/invitation.ejs
@@ -71,7 +71,7 @@
 
     <p>
       Email: <%= email %><br />
-      <%= role === 'LECTURER' ? 'Staff ID: ' : 'Student ID' %><%= password %><br />
+      <%= role === 'LECTURER' ? 'Staff ID: ' : 'Student ID' %><%= id %><br />
       Temporary Password: <a href="tel: +1 (123) 456-7890"><%= password %></a>
     </p>
     <p>
